--- a/Stiven_Santana_P1_AP1/Components/Layout/NavMenu.razor
+++ b/Stiven_Santana_P1_AP1/Components/Layout/NavMenu.razor
@@ -13,6 +13,13 @@
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Aporte/Index">
+                <i class="bi bi-app-indicator h4 h-auto mb-0" aria-hidden="true"></i> Consulta de Aportes
+            </NavLink>
+        </div>
+
     </nav>
 </div>
 
