--- a/Stiven_Santana_P1_AP1/Components/_Imports.razor
+++ b/Stiven_Santana_P1_AP1/Components/_Imports.razor
@@ -8,3 +8,8 @@
 @using Microsoft.JSInterop
 @using Stiven_Santana_P1_AP1
 @using Stiven_Santana_P1_AP1.Components
+
+@using Stiven_Santana_P1_AP1.Modelo
+@using Stiven_Santana_P1_AP1.Service
+
+
